--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-  "name": "my-starter-ts-npm-cli-and-lib",
-  "version": "0.1.2-0",
-  "description": "Typescript で CLI とライブラリの npm パッケージを作成するためのスターター。",
+  "name": "jest-mock-nuxt-content",
+  "version": "0.1.0",
+  "description": "nuxt-content mock for jest",
+  "author": "hankei6km <hankei6km@gmail.com> (https://github.com/hankei6km)",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/hankei6km/jest-mock-nuxt-content.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hankei6km/jest-mock-nuxt-content/issues"
+  },
   "license": "MIT",
-  "keywords": [],
+  "keywords": [
+    "nuxt",
+    "nuxt-content",
+    "jest",
+    "mock"
+  ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "bin": {
-    "count": "dist/main.js"
-  },
   "scripts": {
-    "start": "tsc && node dist/main.js",
-    "start:watch": "nodemon --watch src --ext ts --exec ts-node src/main.ts",
     "build": "tsc",
     "test": "jest",
     "clean": "rm dist/*",
     "upgrade-interactive": "npm-check --update",
     "csb:test": "npm test -- --runInBand --watchAll"
   },
-  "dependencies": {
-    "yargs": "^16.2.0"
-  },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@types/node": "^14.14.28",
-    "@types/yargs": "^16.0.1",
-    "jest": "^26.6.3",
-    "nodemon": "^2.0.7",
-    "npm-check": "^5.9.2",
-    "ts-jest": "^26.5.5",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.2",
+    "jest": "^27.2.4",
+    "nodemon": "^2.0.13",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   }
 }
